--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.6.2",
+    "dayjs": "^1.11.11",
+    "json-bigint": "^1.0.0",
+    "lodash": "^4.17.21",
     "vant": "2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
@@ -34,9 +40,15 @@
     "less-loader": "^8.0.0",
     "lint-staged": "^11.1.2",
     "postcss-pxtorem": "^6.1.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "husky": "^8.0.0"
   },
   "gitHooks": {
     "pre-commit": "lint-staged"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix"
+    ]
   }
 }
